# homecooked

./: LICENSE  TODO  main.py  other.py  pyproject.toml
.antlr/: ExprLexer.interp  ExprLexer.java  ExprParser.interp  ExprParser.java  ExprParser.tokens  Tester.interp  Tester.java  Tester.tokens
docs/: conf.py  index.rst  install.md  tutorial.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  quickstart.doctree  tutorial.doctree  usage.doctree
docs/_build/doctrees/source/: usage.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  install.html  objects.inv  quickstart.html  search.html  searchindex.js  tutorial.html  usage.html
docs/_build/html/_sources/: api.md  api.rst  index.rst  index.rst.txt  install.rst  quickstart.rst  tutorial.rst  usage.rst
docs/_build/html/_sources/source/: usage.rst
docs/_build/html/source/: usage.html
homecooked/: __init__.py  basemodel.py  config.py  constants.py  exceptions.py  request.py  response.py  router.py  server.py  templates.py  utils.py
homecooked/common/: config.py  constants.py  exceptions.py  utils.py
homecooked/defaults/: defaults.py
homecooked/exceptions/: __init__.py  exceptions.py
homecooked/plugins/: authentication.py  csrf.py
homecooked/router/: __init__.py  constants.py  middleware.py  router.py  static.py
templates/: index.html
